version/0.13/_sources/api/solver/_autosummary/settings/cell_registers_child.rst.txt
:orphan:

.. _cell_registers_child:

cell_registers_child
====================

.. autoclass:: ansys.fluent.core.solver.settings_231.cell_registers_child.cell_registers_child

.. rubric:: Attributes

========================================   ============================

Attribute                                                       Summary

========================================   ============================
:ref:`name <name_1>`                                      'name' child.

:ref:`python_name <python_name>`                   'python_name' child.

:ref:`type <type_2>`                                      'type' child.

:ref:`display_options <display_options>`       'display_options' child.

========================================   ============================

.. rubric:: Included in:

======================================   ===========================

Parent                                                       Summary

======================================   ===========================
:ref:`cell_registers <cell_registers>`       'cell_registers' child.

======================================   ===========================

