version/0.27/_sources/api/solver/_autosummary/settings/cell_registers_child.rst.txt
:orphan:

.. _cell_registers_child:

cell_registers_child
====================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.cell_registers_child
    :show-inheritance:

.. rubric:: Attributes

========================================   ============================

Attribute                                                       Summary

========================================   ============================
:ref:`name <name_14>`                                     'name' child.

:ref:`python_name_1 <python_name_1>`               'python_name' child.

:ref:`type <type_8>`                                      'type' child.

:ref:`display_options <display_options>`       'display_options' child.

========================================   ============================

.. rubric:: Methods

====================================================   ============================

Method                                                                      Summary

====================================================   ============================
:ref:`create_volume_surface <create_volume_surface>`       Create a volume surface.

====================================================   ============================

.. rubric:: Included in:

======================================   ===========================

Parent                                                       Summary

======================================   ===========================
:ref:`cell_registers <cell_registers>`       'cell_registers' child.

======================================   ===========================

